--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
         runs-on:
           - self.hosted
         script:
-        - export DEBIAN_FRONTEND=noninteractive && export PATH=/usr/lib/mxe/usr/bin:$PATH && apt-get update && apt-get install -y gnupg ca-certificates && echo 'deb [arch=amd64] https://pkg.mxe.cc/repos/apt focal main' > /etc/apt/sources.list.d/mxeapt.list && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 86B72ED9 && apt-get update && apt-get install -y mxe-i686-w64-mingw32.shared-qt5
+        # - export DEBIAN_FRONTEND=noninteractive && export PATH=/usr/lib/mxe/usr/bin:$PATH && apt-get update && apt-get install -y gnupg ca-certificates && echo 'deb [arch=amd64] https://pkg.mxe.cc/repos/apt focal main' > /etc/apt/sources.list.d/mxeapt.list && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 86B72ED9 && apt-get update && apt-get install -y mxe-i686-w64-mingw32.shared-qt5
         - mkdir build
         - cd build
         - i686-w64-mingw32.shared-cmake ..
