--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,8 +2,8 @@ image: zlofenix/emubuilder:qt5
 pipelines:
   default:
     - step:
-        runs-on:
-          - self.hosted
+        #runs-on:
+        #  - self.hosted
         script:
         # - export DEBIAN_FRONTEND=noninteractive && export PATH=/usr/lib/mxe/usr/bin:$PATH && apt-get update && apt-get install -y gnupg ca-certificates && echo 'deb [arch=amd64] https://pkg.mxe.cc/repos/apt focal main' > /etc/apt/sources.list.d/mxeapt.list && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 86B72ED9 && apt-get update && apt-get install -y mxe-i686-w64-mingw32.shared-qt5
         - mkdir build
