--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,12 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt5 COMPONENTS Core Quick QuickControls2 LinguistTools REQUIRED)
+find_package(Qt5 COMPONENTS Core Quick QuickControls2 WinExtras LinguistTools REQUIRED)
 
 add_definitions(-DWIN32 -DUNICODE -DMBEDTLS_NO_DEBUG)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fno-rtti -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fno-rtti -std=c++17")
 
 add_subdirectory(ZQml)
 add_subdirectory(ZQRes)
